Add Schwarzhorn article

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         //Don't wait for initial page loading until polymer
         var path = window.location.pathname;
-        if (path !== '/alpine/malbun/20170716') {
+        if (path !== '/alpine/malbun/20170716' && path !== '/alpine/davos/20170801') {
           if (path == '/') path = '/start';
           var initialPage = document.createElement('link');
           initialPage.id = 'import';
