--- a/src/pages/start.html
+++ b/src/pages/start.html
@@ -7,7 +7,7 @@
 
     <div class="card">
       <h1>Herzlich willkommen</h1>
-      <p>Hier finden Du ein wildes Sammelsurium von allem, was ich für veröffentlichbar halte.</p>
+      <p>Hier findest Du ein wildes Sammelsurium von allem, was ich für veröffentlichbar halte.</p>
     </div><br />
 
     <div class="card">
